--- a/UlearnGameTests/UlearnGameTests.csproj
+++ b/UlearnGameTests/UlearnGameTests.csproj
@@ -21,7 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
 
 </Project>
